src/snapshots/sim_validator_assignment__config__tests__collect_seats_for_shard_errors-2.snap
---
source: src/config.rs
expression: "config.collect_seats_for_shard(0, &[])"
---
Err(
    "validators fill only 0/8 of seats",
)
